Added topGenres and genre individual pages